--- a/Moblin/Localizable.xcstrings
+++ b/Moblin/Localizable.xcstrings
@@ -1042,7 +1042,14 @@
 
     },
     "You already bought everything!" : {
-
+      "localizations" : {
+        "sv" : {
+          "stringUnit" : {
+            "state" : "translated",
+            "value" : "Du har redan köpt allt!"
+          }
+        }
+      }
     },
     "YouTube" : {
 
